--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="feed_exit_dialog_message">Voce tem certeza que deseja fechar a aplicacao?</string>
     <string name="feed_exit_dialog_positive_button">Confirmar</string>
     <string name="feed_exit_dialog_negative_button">Cancelar</string>
+    <string name="feed_menu_exit_button">Exit Menu</string>
 </resources>
